[workspace]
resolver = "2"

default-members = [
    "blsctl",
    "blsforme",
    "crates/*",
]

members = [
    "blsctl",
    "blsforme",
    "crates/*",
]

[workspace.dependencies]
log = "0.4.21"
gpt = "3.1.0"
thiserror = "1"
nix = { version = "0.28.0", features = ["fs"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
uuid = { version = "1.8.0", features = ["v8"] }
zstd = "0.13.1"
