[workspace]
resolver = "2"

default-members = [
    "blsctl",
    "blsforme",
    "crates/*",
]

members = [
    "blsctl",
    "blsforme",
    "crates/*",
]

[workspace.dependencies]
blake3 = { version = "1.5.3", features = ["mmap", "rayon"] }
log = "0.4.21"
gpt = "3.1.0"
thiserror = "1"
nix = { version = "0.28.0", features = ["fs", "mount"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.10.0", features = ["v8"] }
zstd = "0.13.2"
