[workspace]
resolver = "2"

default-members = [
    "blsctl",
    "blsforme",
    "crates/*",
]

members = [
    "blsctl",
    "blsforme",
    "crates/*",
]

[workspace.dependencies]
blake3 = { version = "1.5.1", features = ["mmap", "rayon"] }
log = "0.4.21"
gpt = "3.1.0"
thiserror = "2.0.11"
nix = { version = "0.29.0", features = ["fs", "mount"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.11.1", features = ["v8"] }
zstd = "0.13.1"
