[package]
name = "blsctl"
version = "0.1.0"
edition = "2021"

[dependencies]
blsforme = { path = "../blsforme" }
clap = { version = "4.5.26", features = ["derive"] }
color-eyre = { version = "0.6.3", features = ["issue-url"] }
glob = "0.3"
log.workspace = true
pretty_env_logger = "0.5.0"
thiserror.workspace = true
nix.workspace = true
topology = { path = "../crates/topology" }
