[package]
name = "blsforme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gpt = "3.1.0"
log.workspace = true
nix.workspace = true
thiserror.workspace = true
uuid = { version = "1.8.0", features = ["v8"] }
