[package]
name = "blsforme"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blake3.workspace = true
log.workspace = true
nix.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
superblock = { path = "../crates/superblock" }
topology = { path = "../crates/topology" }
gpt.workspace = true
