[package]
name = "topology"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror.workspace = true
superblock = { path = "../superblock" }
indextree = { version = "4.6.1", features = ["par_iter"] }
nix.workspace = true
log.workspace = true